--- a/templates/edit.mustache
+++ b/templates/edit.mustache
@@ -1,7 +1,7 @@
 <div id="wiki-wrapper" class="edit">
 <div id="head">
   <h1>Editing <strong>{{title}}</strong></h1>
-  <ul class="actions">
+  <ul class="page-actions">
     <li class="minibutton"><a href="{{base_url}}/{{escaped_url_path}}"
        class="action-view-page">View Page</a></li>
      <li class="minibutton"><a href="{{base_url}}/history/{{escaped_url_path}}"
