--- a/templates/history.mustache
+++ b/templates/history.mustache
@@ -1,14 +1,14 @@
 <div id="wiki-wrapper" class="history">
 <div id="head">
+  <h1>History for <strong>{{title}}</strong></h1>
   <ul class="actions page-actions">
     <li class="minibutton"><a href="{{base_url}}/{{escaped_url_path}}"
        class="action-view-page">View Page</a></li>
     <li class="minibutton"><a href="{{base_url}}/edit/{{escaped_url_path}}"
        class="action-edit-page">Edit Page</a></li>
   </ul>
-  <h1>History for <strong>{{title}}</strong></h1>
 </div>
-<div id="wiki-history">
+<div id="wiki-content">
 
   <ul class="actions">
     <li class="minibutton"><a href="javascript:void(0);"
