--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -3,10 +3,6 @@
 <head>
   <meta http-equiv="Content-type" content="text/html;charset=utf-8">
   <link rel="stylesheet" type="text/css" href="{{base_url}}/css/gollum.css" media="all">
-  <link rel="stylesheet" type="text/css" href="{{base_url}}/css/editor.css" media="all">
-  <link rel="stylesheet" type="text/css" href="{{base_url}}/css/dialog.css" media="all">
-  <link rel="stylesheet" type="text/css" href="{{base_url}}/css/template.css" media="all">
-  <link rel="stylesheet" type="text/css" href="{{base_url}}/css/_styles.css" media="all">
 
   <!--[if IE 7]>
   <link rel="stylesheet" type="text/css" href="{{base_url}}/css/ie7.css" media="all">
@@ -36,43 +32,46 @@
       </a>
     </h1>
   </header>
-  <div class="sidebar">
-    {{#has_sidebar}}
-    <div id="wiki-sidebar" class="gollum-{{sidebar_format}}-content">
-      <div id="sidebar-content" class="markdown-body">
-        {{{sidebar_content}}}
+
+  <div id="container">
+
+    {{{yield}}}
+
+    <div class="sidebar">
+      {{#has_sidebar}}
+      <div id="wiki-sidebar" class="gollum-{{sidebar_format}}-content">
+        <div id="sidebar-content" class="markdown-body">
+          {{{sidebar_content}}}
+        </div>
       </div>
+      {{/has_sidebar}}
+
+      <h2>Actions</h2>
+
+      <ul class="actions">
+        <li>
+          {{>searchbar}}
+        </li>
+        <li><a href="{{base_url}}/pages"
+          class="action-all-pages">All</a></li>
+        <li><a href="{{base_url}}/fileview"
+        class="action-all-pages">Files</a></li>
+        <li>
+          <a href="#" id="minibutton-new-page">New</a></li>
+        {{#may_login}}
+        <li>
+          {{#session.username}}
+          <a href="{{base_url}}/logout">Logout
+            ({{session.username}})
+          </a>
+          {{/session.username}}
+          {{^session.username}}
+          <a href="{{base_url}}/login">Login</a>
+          {{/session.username}}
+        </li>
+        {{/may_login}}
+      </ul>
     </div>
-    {{/has_sidebar}}
-
-    <h2>Actions</h2>
-
-    <ul class="actions">
-      <li>
-        {{>searchbar}}
-      </li>
-      <li><a href="{{base_url}}/pages"
-        class="action-all-pages">All</a></li>
-      <li><a href="{{base_url}}/fileview"
-      class="action-all-pages">Files</a></li>
-      <li>
-        <a href="#" id="minibutton-new-page">New</a></li>
-      {{#may_login}}
-      <li>
-        {{#session.username}}
-        <a href="{{base_url}}/logout">Logout
-          ({{session.username}})
-        </a>
-        {{/session.username}}
-        {{^session.username}}
-        <a href="{{base_url}}/login">Login</a>
-        {{/session.username}}
-      </li>
-      {{/may_login}}
-    </ul>
   </div>
-
-  {{{yield}}}
-
 </body>
 </html>
