--- a/templates/pages.mustache
+++ b/templates/pages.mustache
@@ -2,7 +2,7 @@
 <div id="head" style="border:none;">
   <h1>{{title}}</h1>
 </div>
-<div id="pages">
+<div id="wiki-content">
 
 {{#has_results}}
   <div id="file-browser">
