--- a/templates/file_view.mustache
+++ b/templates/file_view.mustache
@@ -1,6 +1,8 @@
 <div id="wiki-wrapper" class="results">
 <div id="head" style="border:none;">
   <h1>{{title}}</h1>
+</div>
+<div id="wiki-content">
 {{#has_results}}
   <div id="results">
   {{{results}}}
