--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -6,16 +6,20 @@ Mousetrap.bind(['e'], function( e ) {
 });
 </script>
 <div id="wiki-wrapper" class="page">
+  <div id="head">
+  <h1>Seite: {{title}}</h1>
   <ul class="actions page-actions">
     <li class="minibutton" class="jaws">
       <a href="#" id="minibutton-rename-page">Rename</a></li>
     {{#editable}}
     <li class="minibutton"><a href="{{base_url}}/edit/{{escaped_url_path}}"
        class="action-edit-page">Edit</a></li>
+    <li class="minibutton"><a id="delete-link" href="{{base_url}}/{{escaped_url_path}}" data-confirm="Are you sure you want to delete this page?"><span>Delete</span></a></li>
     {{/editable}}
     <li class="minibutton"><a href="{{base_url}}/history/{{escaped_url_path}}"
        class="action-page-history">History</a></li>
   </ul>
+</div>
 <div id="wiki-content">
 <div class="{{#has_header}}has-header{{/has_header}}{{#has_footer}} has-footer{{/has_footer}}{{#has_sidebar}} has-rightbar{{/has_sidebar}}{{#has_toc}} has-toc{{/has_toc}}">
   {{#has_toc}}
@@ -34,6 +38,8 @@ Mousetrap.bind(['e'], function( e ) {
     <div class="markdown-body">
       {{{content}}}
     </div>
+
+    <p id="last-edit">Last edited by <b>{{author}}</b>, {{date}}</p>
   </div>
   {{#has_footer}}
   <div id="wiki-footer" class="gollum-{{footer_format}}-content">
@@ -44,11 +50,5 @@ Mousetrap.bind(['e'], function( e ) {
   {{/has_footer}}
   </div>
 
-</div>
-<div id="footer">
-  <p id="last-edit">Last edited by <b>{{author}}</b>, {{date}}</p>
-  <p>
-    <a id="delete-link" href="{{base_url}}/{{escaped_url_path}}" data-confirm="Are you sure you want to delete this page?"><span>Delete this Page</span></a>
-  </p>
 </div>
 </div>
