--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-type" content="text/html;charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=.707, maximum-scale=.707">
   <link rel="stylesheet" type="text/css" href="{{base_url}}/css/gollum.css" media="all">
 
   <!--[if IE 7]>
