--- a/public/gollum/css/gollum.scss
+++ b/public/gollum/css/gollum.scss
@@ -173,6 +173,8 @@ h1, h2, h3, h4, h5 {
   img {
     padding-left: 1em;
     vertical-align: bottom;
+    position: relative;
+    bottom: 6em;
   }
 
   ul {
